--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,3 +4,11 @@
 .h-fit-content {
     height: fit-content;
   }
+
+  @media (min-width: 1023px){
+  #myProject:hover {
+    filter: brightness(0.9); 
+    transform: scale(1.05); 
+    transition: filter 0.1s ease-in-out, transform 0.1s ease-in-out; 
+
+  }}
